Correct styling+text alignment on all count pages.

--- a/app/core/static/core/countlist.css
+++ b/app/core/static/core/countlist.css
@@ -17,6 +17,11 @@ input[name*='expected_quantity'] {
     height: 24px;
     background-color: transparent;
     border: none;
+    text-align: right;
+}
+
+td[class*="expected_quantity"]{ 
+    text-align: right;
 }
 
 input[name*='counted_date'] {
@@ -38,6 +43,10 @@ input[id*='variance'] {
     text-align: right;
 }
 
+td[class*='variance'] { 
+    text-align: right;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     display: none; 
@@ -46,6 +55,10 @@ input::-webkit-inner-spin-button {
 input[name*='counted_quantity'] {
     width: 64px;
     height: 24px;
+}
+
+td[class*="counted_quantity"]{ 
+    text-align: center;
 }
 
 #searchDiv {
